basic dinamic board

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Sudoku solver</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="puzzle"></div>
+    <button id="solve-btn">Solve</button>
+  </body>
   <script src="app.js"></script>
 </html>
