--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="puzzle"></div>
     <button id="solve-btn">Solve</button>
   </body>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="app.js"></script>
 </html>
